// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Property Modifiers > interface with optional properties 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,7 @@
export interface Config {
-  name: string;
+  debug?: boolean;
+
+  name?: string;
+
  version?: string;
}"
`;

exports[`Comparator Property Modifiers > interface with property changing from required to optional 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,6 +1,13 @@
export interface ProductDetails {
-  description: string;
+  description?: string;
+
+  discount?: number;
+
  id: string;
+
+  inStock: boolean;
+
  name: string;
+
  price: number;
}"
`;

exports[`Comparator Property Modifiers > interface with readonly properties 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,7 @@
export interface ImmutableData {
+  readonly data: string;
+
  readonly id: number;
-  data: string;
+
+  updatedAt: Date;
}"
`;

exports[`Comparator Property Modifiers > method becomes property when source switches kind 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface KindMismatch {
-  item(): string;
+  item: string;
}"
`;

exports[`Comparator Property Modifiers > property becomes method when source switches kind 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface KindMismatch {
-  item: string;
+  item(): string;
}"
`;
